--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 									<a href="#" class="image fit"><img src="images/ml.jpg" alt="" /></a>
 									<p>I have worked on various ML projects like: Regression Analysis, Classification, Time Series Analysis etc.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">GITHUB LINK</a></li>
+										<li><a href="https://github.com/Shafin008/Machine_Learning" class="button">GITHUB LINK</a></li>
 									</ul>
 								</article>
 								<article>
