--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/computer_vision.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/Shafin008/COMPUTER_VISION" class="button large">GITHUB LINK</a></li>
+									<li><a href="https://github.com/Shafin008" class="button large">GITHUB LINK</a></li>
 								</ul>
 							</article>
 
@@ -74,7 +74,7 @@
 									<a href="#" class="image fit"><img src="images/nlp.jpg" alt="" /></a>
 									<p>My NLP projects are based on Sentiment Analysis, Speech Recognition, Named Entity Recognition, OCR etc.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Shafin008/NLP" class="button">GITHUB LINK</a></li>
+										<li><a href="https://github.com/Shafin008" class="button">GITHUB LINK</a></li>
 									</ul>
 								</article>
 								<article>
@@ -86,7 +86,7 @@
 									<a href="#" class="image fit"><img src="images/ml.jpg" alt="" /></a>
 									<p>I have worked on various ML projects like: Regression Analysis, Classification, Time Series Analysis etc.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Shafin008/Machine_Learning" class="button">GITHUB LINK</a></li>
+										<li><a href="https://github.com/Shafin008" class="button">GITHUB LINK</a></li>
 									</ul>
 								</article>
 								<article>
@@ -98,7 +98,7 @@
 									<a href="#" class="image fit"><img src="images/python.png" alt="" /></a>
 									<p>This section contains various Python Projects, Exercises.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Shafin008/Python" class="button">GITHUB LINK</a></li>
+										<li><a href="https://github.com/Shafin008" class="button">GITHUB LINK</a></li>
 									</ul>
 								</article>
 								<article>
@@ -110,7 +110,7 @@
 									<a href="#" class="image fit"><img src="images/research.jpg" alt="" /></a>
 									<p>This section contains my research works, published papers and codes.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Shafin008/Research" class="button">GITHUB LINK</a></li>
+										<li><a href="https://github.com/Shafin008" class="button">GITHUB LINK</a></li>
 									</ul>
 								</article>
 								
